Update upload function